# changwon-corp-credit-project

./: .gitignore  AGENTS.md  README.md  app.py  packages.txt  pyproject.toml  requirements.txt  가이드.md  여신 copy.md  진행현황_v1.md
.streamlit/: config.toml
config/: config.yaml
data_processed/: credit.db  credit_profile.parquet  fs_balance.parquet  fs_cashflow.parquet  fs_income.parquet
data_raw/: 034020_balance.csv  034020_cashflow.csv  034020_income.csv
docs/: interview_closing_script.md  run_commands.md  tutorial_walkthrough.md  tutorial_walkthrough_brief.md
reports/: 034020_credit_report.typ  doosan_credit.md
schema/: tables.schema.yaml
scripts/: run_demo.sh
src/changwon_credit/: __init__.py  analytics.py  cli.py  dash_app.py  etl.py  glossary.py  loader.py  models.py  report_md.py  report_typst.py  streamlit_mobile_app_light.py  visuals.py
src/changwon_credit/templates/: credit_report.typ
tests/: test_analytics.py  test_dash_app.py  test_etl.py  test_loader.py  test_models.py  test_report_md.py  test_report_typst.py  test_visuals.py
